# volatility-risk-forecasting-platform

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py  styles.py  ui_components.py
data/: README.md  sample_prices.csv
database/: README.md
docs/: limitations.md  methodology.md  model_validation.md  sql_architecture.md
examples/: benchmark_sql_queries.py  build_database.py  generate_all_reports.py  run_forecasting_pipeline.py  run_regime_detection.py  run_var_backtest.py
notebooks/: 01_data_pipeline_and_sql_layer.ipynb  02_realised_volatility_estimators.ipynb  03_volatility_forecasting_models.ipynb  04_var_es_backtesting.ipynb  05_regime_detection_and_dashboard_queries.ipynb
reports/: benchmark_results.csv  database_build_time.txt  model_comparison_report.md  model_comparison_results.csv  model_ranking_results.csv  regime_detection_results.csv  regime_threshold_tradeoff.csv  results_audit_report.md  risk_backtest_report.md  sql_performance_report.md  validation_report.md  var_backtest_results.csv
sql/: 00_schema.sql  01_load_data.sql  02_returns_views.sql  03_realised_volatility.sql  04_forecast_tables.sql  05_var_es_backtests.sql  06_breach_analysis.sql  07_model_comparison.sql  08_dashboard_views.sql  09_validation_queries.sql  sample_queries.sql
tests/: conftest.py  test_christoffersen.py  test_data_quality_controls.py  test_database_build.py  test_end_to_end_pipeline.py  test_ewma.py  test_expected_shortfall.py  test_forecast_metrics.py  test_garch_models.py  test_har_and_ml_models.py  test_kupiec.py  (+12 more)
(+46 files in other folders)
