[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-risk-forecasting-platform"
version = "0.1.0"
description = "SQL-backed volatility forecasting and market risk analytics platform."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "arch>=6.0",
  "streamlit>=1.32",
  "plotly>=5.19",
  "yfinance>=0.2",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "nbconvert>=7.0",
  "nbformat>=5.0",
  "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "app", "examples", "tests"]
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
